syntax = "proto3";

option csharp_namespace = "ElectronFlowSim.AnalysisService.GRPC.Protos";

service DBCommunication {
  rpc CreateSave (InputDataDTO) returns (EmptyResponse);
  rpc GetSave (EmptyResponse) returns (InputDataDTO);
}

message InputDataDTO {
  // число границ пушки
  int32 ig = 1;
  
  // число эквипотенциалей
  int32 nmas = 2;
  
  // число задаваемых значений продольной составляющей магнитного поля на оси симметрии пушки
  int32 km = 3;
  
  // число ячеек параболической сетки потенциалов в поперечном направлении
  int32 kp = 4;
  
  // число ячеек сетки потенциалов в продольном направлении
  int32 kq = 5;
  
  // число поперечных ячеек (предельное)
  int32 kpj6 = 6;
  
  // номер катода (всегда 1. Когда пушки с полыми катода, то другое)
  int32 ik = 7;
  
  // параметр, определяющий число дополнительных электронов для многоскоростного пучка
  int32 j1 = 8;
  
  // номер первой итерации
  int32 icr = 9;
  
  // количество итераций
  int32 jcr = 10;
  
  // значения точек радиальная координата по оси ординат
  repeated double r = 11;
  
  // значения точек продольная координата по оси абсцисс
  repeated double z = 12;
  
  // массив потенциалов в узловых точках (нормирован)
  repeated double u = 13;
  
  // количество интервалов, на которые разбит контур
  repeated int32 l = 14;
  
  // радиус кривизны катода
  double rk = 15;
  
  // наибольшее значение поперечной тепловой скорости
  double utep = 16;
  
  // максимальная координата (постоянная) конец счета траектории
  double zkon = 17;
  
  // радиус пролетного канала
  double akl1 = 18;
  
  // нормирующий потенциал
  double u0 = 19;
  
  // массив эквипотенциалов
  repeated double uekvip = 20;
  
  // нормирующее магнитное поле
  double bnorm = 21;
  
  // кэоффициент корректировки магнитного поля
  double abm = 22;
  
  // массив значений магнитных полей
  repeated double bm = 23;
  
  // массив значений тока режим заданного тока
  repeated double aik = 24;
  
  // шаг интегрирования по времени
  double ht = 25;
  
  // расстояние от точек старта до поверхности
  double dz = 26;
  
  // расстояние от катода до поверхности, где ток считается по закону 3/2
  double dtok = 27;
  
  double hq1 = 28;
  
  double ar1s = 29;
}

message EmptyResponse {}