syntax = "proto3";

package electronflow;

import "google/protobuf/empty.proto";

service MagneticFields {
  rpc GetMagneticFieldsFromFile (MagneticFieldsFileRequest) returns (OutputResponse);
}

message MagneticFieldsFileRequest {
  double startPoint = 1;
  double endPoint = 2;
  double step = 3;
  bytes fileContent = 4;
}

message OutputResponse {
  repeated double magneticFieldsPoints = 1;
  repeated double magneticFieldsValues = 2;
  double magneticFieldMaxValues = 3;
}